--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
    kubernetes.io/ingress.class: nginx
 spec:
  rules:
- - host: dev-petclinic.ramsimcec.xyz
+ - host: dev-petclinic.ramsaimcec.xyz
    http:
      paths:
      - path:
